// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HelperFunctions renderFieldElement renders the moon phase name in the card language (English) 1`] = `
<div class="horizon-card-text-container horizon-card-field-moon-phase">
  <div class="horizon-card-field-moon-phase-icon"
       style="transform: rotate(0deg)"
  >
    <ha-icon icon="mdi:moon-full">
    </ha-icon>
  </div>
  <div class="horizon-card-field-value horizon-card-field-value-moon-phase">
    Full moon
  </div>
</div>
`;

exports[`HelperFunctions renderFieldElement renders the moon phase name translated in the card language 1`] = `
<div class="horizon-card-text-container horizon-card-field-moon-phase">
  <div class="horizon-card-field-moon-phase-icon"
       style="transform: rotate(0deg)"
  >
    <ha-icon icon="mdi:moon-full">
    </ha-icon>
  </div>
  <div class="horizon-card-field-value horizon-card-field-value-moon-phase">
    Vollmond
  </div>
</div>
`;

exports[`HelperFunctions renderFieldElement returns a field element template when the provided value is a date for 12 clock with pre-am/pm 1`] = `
<div class="horizon-card-text-container horizon-card-field-sunrise">
  <div class="horizon-card-field-name">
    Gündoğumu
  </div>
  <div class="horizon-card-field-value ">
    <span class="horizon-card-field-value-secondary">
      ÖS
    </span>
    9:37
  </div>
</div>
`;

exports[`HelperFunctions renderFieldElement returns a field element template when the provided value is a date for 12h clock with post-am/pm 1`] = `
<div class="horizon-card-text-container horizon-card-field-sunrise">
  <div class="horizon-card-field-name">
    Sunrise
  </div>
  <div class="horizon-card-field-value ">
    9:37
    <span class="horizon-card-field-value-secondary">
      PM
    </span>
  </div>
</div>
`;

exports[`HelperFunctions renderFieldElement returns a field element template when the provided value is a date for 24h clock 1`] = `
<div class="horizon-card-text-container horizon-card-field-sunrise">
  <div class="horizon-card-field-name">
    Sunrise
  </div>
  <div class="horizon-card-field-value ">
    21:37
  </div>
</div>
`;

exports[`HelperFunctions renderFieldElement returns a field element template when the provided value is a number 1`] = `
<div class="horizon-card-text-container horizon-card-field-sunrise">
  <div class="horizon-card-field-name">
    Sunrise
  </div>
  <div class="horizon-card-field-value ">
    9
  </div>
</div>
`;

exports[`HelperFunctions renderFieldElement returns a field element template when the provided value is a string 1`] = `
<div class="horizon-card-text-container horizon-card-field-sunrise">
  <div class="horizon-card-field-name">
    Sunrise
  </div>
  <div class="horizon-card-field-value ">
    test
  </div>
</div>
`;

exports[`HelperFunctions renderFieldElement returns a field element template when the provided value is undefined 1`] = `
<div class="horizon-card-text-container horizon-card-field-sunrise">
  <div class="horizon-card-field-name">
    Sunrise
  </div>
  <div class="horizon-card-field-value ">
    -
  </div>
</div>
`;
